fixed top menu right alignment

--- a/app/assets/stylesheets/admin/admin.css.sass
+++ b/app/assets/stylesheets/admin/admin.css.sass
@@ -31,26 +31,13 @@ body
 	z-index: 2
 
 header 
-	padding: 0 12px 0 6px
-	h1
-		position: relative
-		padding-top: 20px
-		font-size: 30px
-		float: left
-		display: inline
-	nav
-		vertical-align: top
-		float: right
+	min-height: 10px
 
-	div
-		position: relative
-		z-index: 10
-		a
-			margin-left: 0px
-			margin-top: 0px
-			border: 2px none
-			display: inline
-			float: left
+	nav
+		min-height: 10px
+		float: right
+		font-size: 1em
+
 
 #main
 	min-height: 560px
